# jsplusplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: CMakeLists.txt
docs/: CMakeLists.txt
modules/: CMakeLists.txt
modules/js/: CMakeLists.txt
modules/js/include/: object.hpp  value.hpp
modules/js/src/: double_value.cpp  double_value.hpp  int_value.cpp  int_value.hpp  null_value.cpp  null_value.hpp  object.cpp  string_value.cpp  string_value.hpp  value.cpp  value_base.cpp  value_base.hpp
modules/js/test/: CMakeLists.txt  main.cpp  object.t.cpp  value.t.cpp
